--- a/score_0.2/sports/lol/style.css
+++ b/score_0.2/sports/lol/style.css
@@ -161,6 +161,17 @@
     color: #fff;
 }
 
+.errorRow {
+    background-color: #FF9728;
+    color: #721c24;
+    border: 1px solid #FF9728;
+    padding: 15px;
+    margin: 10px 0;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: bold;
+}
+
 @media (max-width: 768px) {
 
     .game-row-wrap .game-row {
