--- a/score_0.2/sports/basketball/style.css
+++ b/score_0.2/sports/basketball/style.css
@@ -15,6 +15,11 @@
     border: 1px solid #444444; /* 표의 구분선을 추가 */
 }
 
+.game-row-wrap .game-row:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 15px 20px rgba(233, 71, 32, 0.15), 0 10px 10px rgba(233, 71, 32, 0.1);
+}
+
 .game-row-wrap .game-row .field-wrap {
     position: relative;
     display: flex;
@@ -103,6 +108,7 @@
     align-items: center;
 }
 
+
 .game-row-wrap .game-row {
     width: 100%; 
     height: 100%; 
@@ -129,8 +135,8 @@
 }
 
 .game-row-wrap .team-info .tr img{
-    width: 55px;
-    height: 55px;
+    width: 53px;
+    height: 53px;
     padding: 5px;
     background-color: #444444; /* 이미지 배경색을 어둡게 변경 */
 }
@@ -175,6 +181,11 @@
     background-color: #2b2c34; /* 기존의 #F1F1F1 대신 어두운 색상으로 변경 */
     text-align: center;
     border: 1px solid #555555; /* 테두리 추가 */
+}
+
+
+.game-row-wrap .team-info .tr.th.odds {
+    font-size: 0.7em;
 }
 
 .game-row-wrap .score .tr .td{
@@ -233,7 +244,7 @@
 }
 
 .game-row-wrap .game-row .score .tr .td.current {
-    background-color: rgba(233, 71, 32, 0.1);
+    background-color: rgba(233, 71, 32, 0.3);
 }
 
 .game-row-wrap .game-row .team-info .tr.th .td,
