--- a/score_0.2/sports/lol/style.css
+++ b/score_0.2/sports/lol/style.css
@@ -16,13 +16,11 @@
     border: 1px solid #444444; /* 표의 구분선을 추가 */
 }
 
-
-.game-row-wrap .game-row {
-    width: 100%; 
-    height: 100%; 
-    display: flex;
+.game-row-wrap .game-row:hover {
+    transition: transform 0.4s ease, box-shadow 0.4s ease;
+    transform: translateY(-5px);
+    box-shadow: 0 15px 20px rgba(233, 71, 32, 0.15), 0 10px 10px rgba(233, 71, 32, 0.1);
 }
-
 
 .game-row-wrap .team-info {
     flex: 0.5; 
@@ -38,10 +36,10 @@
 }
 
 .game-row-wrap .team-info .tr img{
-    width: 55px;
-    height: 55px;
+    width: 53px;
+    height: 53px;
     padding: 5px;
-    background-color: #444444;
+    background-color: #444444; /* 이미지 배경색을 어둡게 변경 */
 }
 
 .game-row-wrap .team-info .tr .td{
@@ -56,6 +54,10 @@
     border: 1px solid #555555;
 }
 
+.game-row-wrap .team-info .tr.th.odds {
+    font-size: 0.8em;
+}
+
 .game-row-wrap .team-info .tr .td.highlight {
     color: red !important;
     font-size:1.1em;
@@ -66,6 +68,8 @@
 {
     height: 33px;
 }
+
+
 
 .game-row-wrap .team-info .tr,
 .game-row-wrap .score .tr
@@ -146,7 +150,7 @@
 }
 
 .game-row-wrap .game-row .score .tr .td.current {
-    background-color: rgba(233, 71, 32, 0.1);
+    background-color: rgba(233, 71, 32, 0.3);
 }
 
 .game-row-wrap .game-row .team-info .tr.th .td{
