--- a/score_sub/assets/styles/style.css
+++ b/score_sub/assets/styles/style.css
@@ -60,6 +60,30 @@
     align-items: center;
 }
 
+.score-table .list-item .item-center .home .image-container,
+.score-table .list-item .item-center .away .image-container {
+    width: 60px;  /* 고정된 너비 */
+    height: 50px; /* 고정된 높이 */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.score-table .list-item .item-left img {
+    width: 60px;  /* 최대 너비 설정 */
+    height: 50px; /* 최대 높이 설정 */
+    object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+    
+}
+
+.score-table .list-item .item-center .home img,
+.score-table .list-item .item-center .away img
+{
+    width: 60px;  /* 최대 너비 설정 */
+    height: 50px; /* 최대 높이 설정 */
+    object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+}
+
 .item-center .home, .item-center .away {
     display: flex;
     align-items: center;
@@ -154,20 +178,156 @@
 /* 반응형 스타일 설정 */
 @media (max-width: 1280px) {
     .score-table {
-        padding: 15px;
+        padding: 0;
+        width: 100%;
+    }
+
+    .score-table .list-item {
+        padding: 10 0;
+        display: flex;
+        align-items: stretch; /* 수정: 아이템의 높이를 동일하게 맞춤 */
+        width: 100%; /* 추가: 리스트 항목이 전체 너비를 사용하도록 설정 */
+        margin-bottom: 10px;
+    }
+
+    .score-table .list-item .item-left {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .score-table .list-item .item-center {
+        flex: 3; /* 비율을 조정하여 중앙 부분이 더 넓게 차지하도록 설정 */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .score-table .list-item .item-center .image-container {
+        flex:1
+    }
+
+    .score-table .list-item .item-center span {
+        flex:9;
+        font-size: 1.3em;
+        font-weight: bold;
+    }
+
+    .score-table .list-item .item-center .home .image-container,
+    .score-table .list-item .item-center .away .image-container {
+        width: 60px;  /* 고정된 너비 */
+        height: 50px; /* 고정된 높이 */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .score-table .list-item .item-left img {
+        width: 60px;  /* 최대 너비 설정 */
+        height: 50px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+        
+    }
+
+    .score-table .list-item .item-center .home img,
+    .score-table .list-item .item-center .away img
+    {
+        width: 60px;  /* 최대 너비 설정 */
+        height: 50px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+    }
+
+    .score-table .list-item .item-right {
+        flex: 1;
+        text-align: center;
+    }
+
+    .score-table .list-item img {
+        max-width: 100%; /* 이미지가 컨테이너를 벗어나지 않도록 설정 */
+        height: auto;    /* 이미지의 종횡비를 유지 */
+    }
+
+    .score {
+        font-size: 1.5em;
     }
 }
 @media (max-width: 768px) {
-    .list-item {
-        padding: 8px;
-        font-size: 14px;
+    .score-table {
+        padding: 0;
+        width: 100%;
     }
-    .tab-menu button {
-        padding: 4px 8px;
-        font-size: 14px;
+
+    .score-table .list-item {
+        padding: 10 0;
+        display: flex;
+        align-items: stretch; /* 수정: 아이템의 높이를 동일하게 맞춤 */
+        width: 100%; /* 추가: 리스트 항목이 전체 너비를 사용하도록 설정 */
+        margin-bottom: 10px;
     }
-    .tab-content {
-        padding: 8px;
+
+    .score-table .list-item .item-left {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .score-table .list-item .item-center {
+        flex: 3; /* 비율을 조정하여 중앙 부분이 더 넓게 차지하도록 설정 */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .score-table .list-item .item-center .image-container {
+        flex:1
+    }
+
+    .score-table .list-item .item-center span {
+        flex:9;
+        font-size: 1.3em;
+        font-weight: bold;
+    }
+
+    .score-table .list-item .item-center .home .image-container,
+    .score-table .list-item .item-center .away .image-container {
+        width: 60px;  /* 고정된 너비 */
+        height: 50px; /* 고정된 높이 */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .score-table .list-item .item-left img {
+        width: 60px;  /* 최대 너비 설정 */
+        height: 50px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+        
+    }
+
+    .score-table .list-item .item-center .home img,
+    .score-table .list-item .item-center .away img
+    {
+        width: 60px;  /* 최대 너비 설정 */
+        height: 50px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+    }
+
+    .score-table .list-item .item-right {
+        flex: 1;
+        text-align: center;
+    }
+
+    .score-table .list-item img {
+        max-width: 100%; /* 이미지가 컨테이너를 벗어나지 않도록 설정 */
+        height: auto;    /* 이미지의 종횡비를 유지 */
+    }
+
+    .score {
+        font-size: 1.5em;
     }
 }
 
