--- a/score_sub/sports/soccer/style.css
+++ b/score_sub/sports/soccer/style.css
@@ -1,406 +1,506 @@
-.table-container {
-    flex: 1;
-    overflow-y: auto;
-    background: linear-gradient(135deg, rgba(27, 28, 35, 0.8), rgba(37, 38, 44, 0.9));
-    border-radius: 10px;
-    width: 100%;
+.score-table {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.table-container::before {
+.list-item-wrapper {
+    margin: 10px 0;
+    border: 1px solid #000;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    width: 100%;
+    background-color: #1D1C22;
+}
+
+.list-item-wrapper .league-name {
+    color: #fff;
+    font-size: 0.7em;
+    text-align: center;
+    padding:10px
+}
+
+.list-item {
+    cursor: pointer;
+    display: flex;
+    align-items: stretch;
+    padding: 10px;
+    background-color: #2c2c2c;
+    transition: background-color 0.3s;
+    position: relative; /* 삼각형 배치를 위한 상대 위치 설정 */
+}
+
+.list-item::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 10px;
-    z-index: -1;
-    box-shadow: 0 10px 20px rgba(233, 71, 32, 0.1), 0 6px 6px rgba(233, 71, 32, 0.05);
-    background: linear-gradient(135deg, rgba(233, 71, 32, 0.1), rgba(233, 71, 32, 0.05));
+    background: linear-gradient(to bottom right, rgba(180, 108, 108, 0.1) 50%, rgba(44, 44, 44, 0.1) 50.5%);
+    pointer-events: none; /* 클릭 이벤트가 배경 요소에 전달되지 않도록 설정 */
 }
 
-/* 기본 스타일 설정 */
-.score-table {
-    width: 100%;
+.list-item:hover {
+    background-color: #444;
+}
+
+.list-item .item-left, .list-item .item-center, .list-item .item-right {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    background-color: transparent;
-}
-
-.score-table .row {
-    display: flex;
     justify-content: space-between;
-    padding: 15px;
-    background: linear-gradient(135deg, #1D212A, #2B2C33);
-    border-radius: 10px;
-    box-shadow: 0 10px 15px rgba(233, 71, 32, 0.1), 0 6px 6px rgba(233, 71, 32, 0.05);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    color: white;
-    font-size: 0.9em;
-    cursor: pointer;
-}
-
-.score-table .row:nth-child(odd) {
-    background: linear-gradient(135deg, #2B2C33, #1D212A);
-}
-
-.score-table .row:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 15px 20px rgba(233, 71, 32, 0.15), 0 10px 10px rgba(233, 71, 32, 0.1);
-}
-
-.score-table .cell {
-    flex: 1;
-    padding: 0 10px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-align: center;
-}
-
-.score-table .cell.score-column {
-    flex: 0.3;
-}
-
-.score-table .cell.tr-icon.league-icon {
-    flex: 1.5;
-    text-align: left;
-}
-
-.score-table .cell.time-column {
-    flex: 0.3;
-}
-
-/* 상태별 스타일 */
-.status {
-    display: inline-block;
-    width: 60px;
-    text-align: center;
-    padding: 2px 8px;
-    border-radius: 5px;
+    font-size:1.3em;
     font-weight: bold;
-    color: white;
 }
 
-.status.in-progress {
-    background-color: #E94720;
+.item-left, .item-center, .item-right {
+    flex: 1;
+    text-align: center;
+    color: #fff;
 }
 
-.status.ready {
-    background-color: rgba(233, 71, 32, 0.5);
-    color: #333333;
+.item-center {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.status.finished {
-    background-color: #4CAF50;
-    color: white;
+.score-table .list-item .item-center .home .image-container,
+.score-table .list-item .item-center .away .image-container {
+    width: 60px;  /* 고정된 너비 */
+    height: 50px; /* 고정된 높이 */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.status.cancel {
-    background-color: #757575;
-    color: white;
+.score-table .list-item .item-left img {
+    width: 60px;  /* 최대 너비 설정 */
+    height: 50px; /* 최대 높이 설정 */
+    object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+    
 }
 
-.status.postponed {
-    background-color: #80ad2b;
-    color: white;
+.score-table .list-item .item-center .home img,
+.score-table .list-item .item-center .away img
+{
+    width: 60px;  /* 최대 너비 설정 */
+    height: 50px; /* 최대 높이 설정 */
+    object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
 }
 
-.status.cut {
-    background-color: #2b6ead;
-    color: white;
+.item-center .home, .item-center .away {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 5px 0;
 }
 
-/* 기본 이미지 필터 제거 */
-.score-table .cell img {
-    width: 20px;
-    height: 20px;
-    vertical-align: middle;
-    margin-right: 8px;
-    filter: none;
+.score-table .list-item .item-center .home-score span,
+.score-table .list-item .item-center .away-score span {
+    border: 1px solid #797979;
+    padding: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    background: linear-gradient(to bottom, #000000, #8b8b8b);
+    border-radius: 3px;
 }
 
-/* 리그명 이미지 흰색으로 변경 */
-.score-table .cell.league-icon img {
-    filter: brightness(0) invert(1);
-}
-
-.team-icon {
-    filter: none !important;
-}
-
-/* 점수 강조 스타일 */
-.highlight {
+.score-table .list-item .item-center .home-score .current-period,
+.score-table .list-item .item-center .away-score .current-period {
     font-weight: bold;
     color: #E94720;
 }
 
-/* Collapse 스타일 */
 .collapse-content {
     display: none;
+    flex-direction: column; /* 수직 배치 */
     background-color: #2c2c2c;
+    border-radius: 8px; /* 추가 */
     padding: 10px;
-    border-radius: 10px;
-    margin-top: 10px;
-    width: 98%; /* 전체 폭을 차지하도록 설정 */
+    margin-top: 10px; /* 리스트 항목과 경계를 없애기 위해 마진 조정 */
+    border-top: none; /* 리스트 항목과 중복되지 않도록 위쪽 경계선 제거 */
 }
 
-/* 탭 메뉴 스타일 */
 .tab-menu {
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 10px;
-    width: 100%; /* 전체 폭을 차지하도록 설정 */
+    margin-bottom: 10px; /* 탭 메뉴와 콘텐츠 사이 간격 추가 */
 }
 
-.tab-menu .tab {
-    flex: 1;
-    padding: 10px;
+.tab-menu button {
+    margin-right: 5px;
+    padding: 5px 10px;
     cursor: pointer;
-    background-color: #3a3a3a;
-    border-radius: 5px;
+    background-color: #444;
     color: white;
-    text-align: center;
-    margin: 0 5px;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
-.tab-menu .tab.active {
-    background-color: rgba(233, 71, 32, 0.4);
+.tab-menu button:hover, .tab-menu button.active {
+    background-color: #E94720;
 }
 
 .tab-content {
     display: none;
-    width: 100%; /* 전체 폭을 차지하도록 설정 */
+    padding: 10px;
+    background-color: #2c2c2c;
+    border: 1px solid #999;
+    border-radius: 8px; /* 추가 */
 }
 
 .tab-content.active {
     display: block;
 }
 
-.game-detail {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-}
-
-.game-detail .team {
-    text-align: center;
-}
-
-.game-detail .team img {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 5px;
-}
-
-.game-detail .score {
-    text-align: center;
-    font-size: 24px;
+.score.highlight {
+    color: #E94720;
     font-weight: bold;
 }
 
-.game-detail .score .home-score.highlight {
-    color: red;
+.triangle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 45px solid #E94720; /* 삼각형 색상 */
+    border-bottom: 45px solid transparent; /* 삼각형 투명색 */
 }
 
-.game-detail .score .away-score.highlight {
-    color: blue;
+
+.triangle.in-progress{
+    border-left: 45px solid #E94720; /* 삼각형 색상 */
+    border-bottom: 45px solid transparent; /* 삼각형 투명색 */
 }
 
-.game-detail .score .vs {
-    margin: 0 10px;
+.triangle.ready {
+    border-left: 45px solid #144bc4; /* 삼각형 색상 */
+    border-bottom: 45px solid transparent; /* 삼각형 투명색 */
 }
 
-.odds-section {
-    margin-bottom: 20px;
-    background-color: #3a3a3a;
-    padding: 15px;
-    color: #E94720;
-
-    border-radius: 10px;
+.triangle.final {
+    border-left: 45px solid #3f1606; /* 삼각형 색상 */
+    border-bottom: 45px solid transparent; /* 삼각형 투명색 */
 }
 
-.odds-section .odds-type {
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: #E94720;
-    text-align: center;
+.triangle.postponed {
+    border-left: 45px solid #0d6385; /* 삼각형 색상 */
+    border-bottom: 45px solid transparent; /* 삼각형 투명색 */
+}
+
+.triangle-text {
+    position: absolute;
+    top: 6px;
+    left: -40px; /* 텍스트의 위치를 삼각형 안으로 조정 */
+    transform: rotate(-45deg); /* 텍스트를 대각선으로 회전 */
+    color: white; /* 텍스트 색상 */
+    font-size: 12px; /* 텍스트 크기 조정 */
+    white-space: nowrap; /* 텍스트가 한 줄에 표시되도록 설정 */
+}
+
+.period {
     font-size: 1.1em;
-}
-
-.minus span {
-    color: red !important;
-}
-
-.normal span {
-    color: #4CA35C !important;
-}
-
-.odds-values {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.odds-values .odds-item {
-    flex: 1;
-    text-align: center;
-    background-color: #2c2c2c;
-    margin: 0 10px;
-    padding: 10px;
+    background-color: #000;
     border-radius: 10px;
-    color: white;
+    padding: 7px 13px
 }
 
-.odds-red {
-    color: #E94720;
+.period.in-progress {
+    background-color: #E94720;
 }
 
-.odds-blue {
-    color: #4CA35C;
+.period.ready {
+    background-color: #144bc4;
 }
 
-.errorRow {
-    background-color: #FF9728;
-    color: #721c24;
-    border: 1px solid #FF9728;
-    padding: 15px;
-    margin: 10px 0;
-    border-radius: 5px;
-    text-align: center;
-    font-weight: bold;
+.period.final {
+    background-color: #3f1606;
 }
 
-/* 반응형 스타일 */
-@media (max-width: 768px) {
-    .table-container {
-        overflow-y: scroll;
-    }
+.period.postponed {
+    background-color: #0d6385;
+}
 
+
+/* 반응형 스타일 설정 */
+@media (max-width: 1280px) {
     .score-table {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 10px;
+        padding: 0;
         width: 100%;
     }
 
-    .score-table .row {
-        position: relative;
-        width: 80%;
+    .score-table .list-item {
+        padding: 10 0;
+        display: flex;
+        align-items: stretch; /* 수정: 아이템의 높이를 동일하게 맞춤 */
+        width: 100%; /* 추가: 리스트 항목이 전체 너비를 사용하도록 설정 */
+        margin-bottom: 10px;
+    }
+
+    .score-table .list-item .item-left {
+        flex: 1;
         display: flex;
         flex-direction: column;
-        align-items: flex-start; /* 좌측 정렬로 변경 */
-        background: linear-gradient(135deg, #1D212A, #2B2C33);
-        border-radius: 10px;
-        box-shadow: 0 10px 15px rgba(233, 71, 32, 0.1), 0 6px 6px rgba(233, 71, 32, 0.05);
-        padding: 15px;
-        margin-bottom: 10px;
-        color: white;
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
-        overflow: hidden;
-    }
-
-    .score-table .cell {
-        display: block; /* 각 셀을 블록 요소로 변경 */
-        padding: 5px 0;
-    }
-
-    .score-table .cell.team-column {
-        width: 100%;
-        text-align: right;
-    }
-
-    .score-table .cell,
-    .score-table .cell:nth-child(5) {
-        width: 100%;
-        text-align: center;
-        font-size: 1.2em;
-    }
-
-    .score-table .cell.score-column {
-        width: 100%;
-        text-align: center; /* 텍스트 우측 정렬 */
-    }
-
-    .score-table .cell:before {
-        content: attr(data-label);
-        font-weight: bold;
-        margin-right: 10px;
-        display: inline-block;
-    }
-
-    .score-table .cell.team-column img {
-        width: 35px;
-        height: 35px;
-    }
-
-    .score-table .row .cell.tr-icon {
-        width: 100%;
-        text-align: left;
-        font-size: 1.2em;
-    }
-
-    .score-table .row .cell:nth-child(2) {
-        font-size: 1.2em;
-        position: absolute;
-        width: 80%;
-        text-align: right;
-    }
-
-    .status {
-        width: auto;
-    }
-
-
-    .collapse-content {
-        display: none;
-        background-color: #2c2c2c;
-        padding: 3px;
-        border-radius: 3px;
-        margin-top: 3px;
-        width: 90%; /* 전체 폭을 차지하도록 설정 */
-    }
-
-    .score-table .cell.team-column {
-        flex: 1;
-        display: flex;
         justify-content: center;
+    }
+
+    .score-table .list-item .item-center {
+        flex: 3; /* 비율을 조정하여 중앙 부분이 더 넓게 차지하도록 설정 */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .score-table .list-item .item-center .image-container {
+        flex:1
+    }
+
+    .score-table .list-item .item-center span {
+        flex:9;
+        font-size: 1.3em;
+        font-weight: bold;
+    }
+
+    .score-table .list-item .item-center .home .image-container,
+    .score-table .list-item .item-center .away .image-container {
+        width: 60px;  /* 고정된 너비 */
+        height: 50px; /* 고정된 높이 */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .score-table .list-item .item-left img {
+        width: 60px;  /* 최대 너비 설정 */
+        height: 50px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+        
+    }
+
+    .score-table .list-item .item-center .home img,
+    .score-table .list-item .item-center .away img
+    {
+        width: 60px;  /* 최대 너비 설정 */
+        height: 50px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+    }
+
+    .score-table .list-item .item-center .home-score,
+    .score-table .list-item .item-center .away-score {
+        display: none;
+    }
+
+    .score-table .list-item .item-right {
+        flex: 1;
+        text-align: center;
+    }
+
+    .score-table .list-item img {
+        max-width: 100%; /* 이미지가 컨테이너를 벗어나지 않도록 설정 */
+        height: auto;    /* 이미지의 종횡비를 유지 */
+    }
+
+    .period {
+        border-radius: 10px;
+        font-size: 1.1em;
+        padding: 3px 10px;
+        margin: 5px;
+    }
+
+    .score {
+        font-size: 1.5em;
     }
 }
-
-@media (max-width: 480px) {
+@media (max-width: 768px) {
     .score-table {
-        grid-template-columns: 1fr;
+        padding: 0;
+        width: 100%;
     }
 
-    .score-table .row .cell:nth-child(2) {
-        position: absolute;
-        width: 80%;
-        text-align: right;
-    }
-
-    .score-table .row {
-        width: 80%;
-    }
-
-    .collapse-content {
-        display: none;
-        background-color: #2c2c2c;
-        padding: 3px;
-        border-radius: 3px;
-        margin-top: 3px;
-        width: 86%; /* 전체 폭을 차지하도록 설정 */
-    }
-
-    .score-table .cell.team-column {
-        flex: 1;
+    .score-table .list-item {
+        padding: 10 0;
         display: flex;
+        align-items: stretch; /* 수정: 아이템의 높이를 동일하게 맞춤 */
+        width: 100%; /* 추가: 리스트 항목이 전체 너비를 사용하도록 설정 */
+        margin-bottom: 10px;
+    }
+
+    .score-table .list-item .item-left {
+        flex: 1;
+        font-size: 1em;
+        display: flex;
+        flex-direction: column;
         justify-content: center;
     }
-    
-    .score-table .cell.tr-icon.league-icon {
-        width: 50%;
+
+    .score-table .list-item .item-center {
+        flex: 3; /* 비율을 조정하여 중앙 부분이 더 넓게 차지하도록 설정 */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
     }
+
+    .score-table .list-item .item-center .image-container {
+        flex:1
+    }
+
+    .score-table .list-item .item-center span {
+        flex:9;
+        font-size: 1em;
+        font-weight: bold;
+    }
+
+    .score-table .list-item .item-center .home .image-container,
+    .score-table .list-item .item-center .away .image-container {
+        width: 60px;  /* 고정된 너비 */
+        height: 50px; /* 고정된 높이 */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .score-table .list-item .item-left img {
+        width: 60px;  /* 최대 너비 설정 */
+        height: 50px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+        
+    }
+
+    .score-table .list-item .item-center .home img,
+    .score-table .list-item .item-center .away img
+    {
+        width: 60px;  /* 최대 너비 설정 */
+        height: 50px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+    }
+
+    .score-table .list-item .item-center .home-score,
+    .score-table .list-item .item-center .away-score {
+        display: none;
+    }
+
+    .score-table .list-item .item-right {
+        flex: 1;
+        text-align: center;
+
+    }
+
+    .score-table .list-item img {
+        max-width: 100%; /* 이미지가 컨테이너를 벗어나지 않도록 설정 */
+        height: auto;    /* 이미지의 종횡비를 유지 */
+    }
+
+    .period {
+        border-radius: 10px;
+        font-size: 1em;
+        padding: 3px 7px;
+        margin: 5px;
+    }
+
+    .score {
+        font-size: 1.2em;
+    }
+
+}
+
+@media (max-width: 380px) {
+    .score-table {
+        padding: 0;
+        width: 100%;
+    }
+
+    .score-table .list-item {
+        padding: 10 0;
+        display: flex;
+        align-items: stretch; /* 수정: 아이템의 높이를 동일하게 맞춤 */
+        width: 100%; /* 추가: 리스트 항목이 전체 너비를 사용하도록 설정 */
+        margin-bottom: 10px;
+    }
+
+    .score-table .list-item .item-left {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 0.7em
+    }
+
+    .score-table .list-item .item-center {
+        flex: 3; /* 비율을 조정하여 중앙 부분이 더 넓게 차지하도록 설정 */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+
+    .score-table .list-item .item-center .image-container {
+        flex:1
+    }
+
+    .score-table .list-item .item-center .home span,
+    .score-table .list-item .item-center .away span
+     {
+        flex:9;
+        font-weight: bold;
+        font-size: 0.7em;
+    }
+
+    .score-table .list-item .item-center .home .image-container,
+    .score-table .list-item .item-center .away .image-container {
+        width: 30px;  /* 고정된 너비 */
+        height: 25px; /* 고정된 높이 */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .score-table .list-item .item-left img {
+        max-width: 60px;  /* 최대 너비 설정 */
+        max-height: 30px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+        
+    }
+
+    .score-table .list-item .item-center .home img,
+    .score-table .list-item .item-center .away img
+    {
+        max-width: 40px;  /* 최대 너비 설정 */
+        max-height: 30px; /* 최대 높이 설정 */
+        object-fit: contain; /* 원본 비율을 유지하며 크기 조정 */
+    }
+
+    .score-table .list-item .item-center .home-score,
+    .score-table .list-item .item-center .away-score {
+        display: none;
+    }
+
+    .score-table .list-item .item-right {
+        flex: 1;
+        text-align: center;
+    }
+
+    .score-table .list-item img {
+        max-width: 100%; /* 이미지가 컨테이너를 벗어나지 않도록 설정 */
+        height: auto;    /* 이미지의 종횡비를 유지 */
+    }
+
+    .period {
+        border-radius: 5px;
+        font-size: 0.7em;
+        padding: 2px 6px;
+        margin: 5px;
+    }
+
+    .score {
+        font-size: 1em;
+    }
+
 }
